--- a/web/htmlbase/homework_2.html
+++ b/web/htmlbase/homework_2.html
@@ -12,7 +12,7 @@
     <h2>春江花月夜</h2>
     <h5>张若虚</h5>
     <p>
-        春江潮水连海平，海上明月共潮生。\n
+        春江潮水连海平，海上明月共潮生。
         滟滟随波千万里，何处春江无月明！<br>
         江流宛转绕芳甸，月照花林皆似霰；<br>
         空里流霜不觉飞，汀上白沙看不见。<br>
